<resources>
    <string name="app_name">Cuide de \nMim!</string>
    <string name="boas_vindas">Seja bem-vindo(a)\n ao</string>
    <string name="email_hint">Insira o seu e-mail</string>
    <string name="password_hint">Insira a sua senha</string>
    <string name="Entrar_botao">Entrar</string>
    <string name="n_possui_conta">Não possui uma conta ainda?</string>
    <string name="Criar_nova_acc">Crie uma nova conta!</string>
    <string name="tv_crie_conta">Crie a sua conta</string>
    <string name="insra_username">Insira o seu nome de usuário</string>

    <string name="email_example">ex@examplo.com</string>
    <string name="user_example">usuario_exemplo</string>

    <string name="password_example">**********</string>
    <string name="insira_password">Insira a sua senha</string>
    <string name="confirma_senha">Insira a sua senha novamente</string>

    <string name="confirmar_criacao_acc">Criar a conta!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="boas_vindas_logado">Olá, *Nome do perfil*!\nO que você deseja?</string>

    <string name="link_gereenciado_med">Ir para o gerenciador de \nmedicamentos e horários.</string>

    <string name="link_lista_compras">Acessar a lista de compras</string>

    <string name="alerta_remedios">Cuidado! Os seguinte medicamentos estão\nAcabando</string>

    <string name="prox_med">Próximas 3\nmmedicações:</string>
    <string name="med_hist">Ultimas 3\nmedicações\nconsumidas</string>

    <string name="perfis_titulo">Perfis</string>
    <string name="add_perfil">Adicionar perfil</string>

    <string name="titulo_cria_perfil">Novo Perfil</string>
</resources>