<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Inicio"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/person_image"
            android:layout_width="154dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_inicio_logado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/boas_vindas_logado"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/person_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_inicio" />

        <TextView
            android:id="@+id/tv_link_ger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:text="@string/link_gereenciado_med"
            android:textColor="#3F51B5"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/person_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_inicio_logado" />

        <TextView
            android:id="@+id/tv_link_lista_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/link_lista_compras"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/person_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_ger" />

        <TextView
            android:id="@+id/tv_alerta_falta_rem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/alerta_remedios"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_lista_c" />

        <TextView
            android:id="@+id/tv_prox_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="98dp"
            android:text="@string/prox_med"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alerta_falta_rem" />

        <TextView
            android:id="@+id/tv_hist_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="32dp"
            android:text="@string/med_hist"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alerta_falta_rem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>